--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "nuxt-app",
-  "type": "module",
+  "name": "tizetabox-frontend",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
@@ -9,24 +9,15 @@
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare"
   },
+  "devDependencies": {
+    "@nuxt/devtools": "latest",
+    "@nuxtjs/tailwindcss": "^6.8.0",
+    "nuxt": "^3.7.4",
+    "vue": "^3.3.8",
+    "vue-router": "^4.2.5"
+  },
   "dependencies": {
-    "@apollo/client": "^3.14.0",
-    "@headlessui/vue": "^1.7.23",
-    "@heroicons/vue": "^2.2.0",
-    "@nuxtjs/apollo": "^5.0.0-alpha.15",
-    "@nuxtjs/google-fonts": "^3.2.0",
-    "@nuxtjs/tailwindcss": "^6.14.0",
-    "@pinia/nuxt": "^0.11.2",
-    "@vee-validate/nuxt": "^4.15.1",
-    "@vee-validate/rules": "^4.15.1",
-    "@vee-validate/zod": "^4.15.1",
-    "graphql": "^16.11.0",
-    "graphql-tag": "^2.12.6",
-    "lucide-vue-next": "^0.542.0",
-    "nuxt": "^4.0.3",
-    "pinia": "^3.0.3",
-    "vue": "^3.5.20",
-    "vue-router": "^4.5.1",
-    "zod": "^3.25.76"
+    "@pinia/nuxt": "^0.4.11",
+    "pinia": "^2.1.7"
   }
 }
